fe_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  selector:
    matchLabels:
      app: frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: yuy910616/front_end
        ports:
        - containerPort: 5000
      nodeSelector:
        cloud.google.com/gke-nodepool: "default-pool"
