rabbit-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    component: rabbitmq
  name: rabbitmq-service
spec:
  ports:
  - name: rq-port
    port: 5672
  - name: management
    port: 15672
  selector:
    app: taskQueue
    component: rabbitmq

---
apiVersion: apps/v1
kind: Deployment
metadata:
	name: rabbitmq
spec:
	strategy:
		type: Recreate
	selector:
		matchLabels:
			app: rabbitmq
	replicas: 1 
	template:
		metadata:
			labels:
				app: rabbitmq
		spec:
			containers:
			- name: rabbitmq
				image: rabbitmq
				ports:
				- containerPort: 80
				- containerPort: 15672
