services.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: rabbitmq-master
  name: rabbitmq-service
spec:
  ports:
    - port: 5672
      name: queue
      targetPort: 5672
    - port: 15672
      name: management
      targetPort: 15672
  selector:
    app: rabbitmq-master
