ingress.yaml

apiVersion: v1
kind: Service
metadata:
  name: kubia-nodeport
spec:
  type: NodePort             
  ports:
  - port: 80                 
    targetPort: 8080         
    nodePort: 30123          
  selector:
    app: kubia
---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: kubia
spec:
    rules:
      - http:
          paths:
            - path: /                           
              backend:
                serviceName: kubia-nodeport     
                servicePort: 80
